# prompy

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  PUBLISHING.md  README.md  REFERENCE.md  RELEASE.md  USER_GUIDE.md  justfile  pyproject.toml  run.sh  test_tomllib_compat.py
.github/: README.md  SETUP.md
.github/workflows/: ci.yml  ci_cd.yml  homebrew-publishing.yml  pypi-publishing.yml  release.yml
docs/: implementation_sketch.py  prompt-plan.md  prompy.1  spec.md  user_guide.md
packaging/homebrew/: prompy.rb
sample-prompts/: config.yaml  detections.yaml
sample-prompts/prompts/fragments/: all-tests-pass.md  avoid-mocks.md  code-footer.md  code-header.md  conform-spec.md  git-commit.md  implement-my-feature.md  improving.md  init-shell.md  model-introspect.md  new-prompt-plan.md  next-prompt.md  small-refactor.md  spec-to-prompt-plan.md  update-prompt-plan.md
sample-prompts/prompts/fragments/generic/: all-tests-pass.md  init-shell.md  run-all-tests.md
sample-prompts/prompts/fragments/prompt/: improve.md  improver.md  next.md
sample-prompts/prompts/fragments/prompt-plan/: new.md  next.md  next1.md  update.md  update2.md
sample-prompts/prompts/fragments/rules/: all.md  approve-new-files.md  avoid-mocks.md  avoid-mocks1.md  big-daddy.md  code.md  comments.md  getting-help.md  improver.md  keywords.md  tests.md  us.md
sample-prompts/prompts/fragments/spec/: conform.md  to-prompt-plan.md
sample-prompts/prompts/fragments/spec/brainstorm/: end.md  start.md
sample-prompts/prompts/fragments/steps/: all-tests-pass.md  git-commit.md  improver.md  improver2.md  init-shell.md
sample-prompts/prompts/fragments/tasks/: code-review.md
sample-prompts/prompts/languages/javascript/: react-component.md
sample-prompts/prompts/languages/python/: code-standards.md  generate-tests.md  init-shell-uv.md  init-shell-venv.md
sample-prompts/prompts/projects/prompy/: format-code.md  init-shell.md  run-all-tests.md
sample-prompts/prompts/tasks/: code-review.md
scripts/: build_package.sh  install.sh  update_homebrew.py  verify_dist.sh
src/prompy/: __init__.py  cache.py  cli.py  cli_completions.py  completions.py  config.py  context.py  diagnostics.py  editor.py  error_handling.py  fragment_parser.py  frontmatter.py  jinja_extension.py  output.py  prompt_context.py  prompt_file.py  prompt_files.py  prompt_render.py  references.py
tests/: __init__.py  conftest.py  jinja_test_support.py  test_autouse_mock_confirmation.py  test_cache.py  test_cli.py  test_cli_cache.py  test_cli_formatting.py  test_cli_management.py  test_cli_output.py  test_cli_save.py  test_completions.py  test_config.py  test_context.py  test_diagnostics.py  test_diagnostics_basic.py  test_editor.py  test_editor_enhancements.py  test_editor_mocking.py  test_enhanced_detection.py  test_error_handling.py  test_fragment_indentation.py  test_fragment_parser.py  test_frontmatter.py  test_jinja_extension_performance.py  test_jinja_extension_preprocess.py  test_output.py  test_package_installation.py  test_prompt_file.py  test_prompt_render.py  test_references.py
tests/utils/: __init__.py  editor_mock.py
